# ChangeLog for dev-libs/tinyxml
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/tinyxml/ChangeLog,v 1.22 2012/04/16 19:20:21 ranger Exp $

  16 Apr 2012; Brent Baude <ranger@gentoo.org> tinyxml-2.6.2-r2.ebuild:
  Marking tinyxml-2.6.2-r2 ppc for bug 398285

  15 Mar 2012; Bernard Cafarelli <voyageur@gentoo.org>
  -tinyxml-2.6.1-r1.ebuild, +tinyxml-2.6.2-r1.ebuild:
  Restore stable 2.6.2 version for x86, intented removal was for 2.6.1, thanks
  Mr_Bones

  15 Mar 2012; Bernard Cafarelli <voyageur@gentoo.org> tinyxml-2.6.2.ebuild,
  -tinyxml-2.6.2-r1.ebuild, tinyxml-2.6.2-r2.ebuild:
  Control static archives building, not installation only with USE=static-libs,
  thanks ssuominen in bug #408239

*tinyxml-2.6.2-r2 (14 Mar 2012)

  14 Mar 2012; Bernard Cafarelli <voyageur@gentoo.org>
  +files/tinyxml-2.6.2-defineSTL.patch, +tinyxml-2.6.2-r2.ebuild:
  Set TIXML_USE_STL in header when USE=stl, idea from Arch and bug #407825.
  Packages depending on USE=stl should not have to append TIXML_USE_STL to
  CXXFLAGS anymore

  13 Nov 2011; Markus Meier <maekke@gentoo.org> tinyxml-2.6.2-r1.ebuild:
  x86 stable, bug #388619

*tinyxml-2.6.2-r1 (07 Nov 2011)

  07 Nov 2011; Fabian Groffen <grobian@gentoo.org> +tinyxml-2.6.2-r1.ebuild,
  +files/Makefile-3:
  Patch Makefile and ebuild for Mach-O (dylib) support and keyword ~x86-macos
  and ~x64-macos

  28 Oct 2011; Tony Vroon <chainsaw@gentoo.org> tinyxml-2.6.2.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo & Ian
  "idella4" Delaney in bug #388619.

  24 Oct 2011; Joerg Bornkessel <hd_brummy@gentoo.org> tinyxml-2.6.2.ebuild:
  keyworded ~arm

  09 Oct 2011; Markus Meier <maekke@gentoo.org> tinyxml-2.6.1-r1.ebuild:
  x86 stable, bug #375503

  03 Oct 2011; Bernard Cafarelli <voyageur@gentoo.org> tinyxml-2.6.2.ebuild:
  Default to +stl, as packages depending on the USE flag all require enabling