@@ -1,10 +1,27 @@
-AUX Makefile-2 732 RMD160 9c39630188f0be3b05b785bd55f24e6b02b73fa3 SHA1 53745f72b49194b0b8f0e677026af26a0594c271 SHA256 2e4afa3b11bc44612a9586c345a21ac19eb04ec877cd1267fbd07dc2f9180880
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX Makefile-3 1054 RMD160 14f1603c4c4ac252e08161d75da9f1564a4d8fee SHA1 06c4a8b325be6501c2396c388f8c7b885be989ff SHA256 88fb55306acac573c00da8e03c5ac780f23313879b8952c8657905897a0caf88
 AUX tinyxml-2.6.1-entity.patch 1776 RMD160 495fa342f00616a96c0a5044d652aa94e34c4675 SHA1 402831d1fab0fe7cac7ad761b530a54c0cf9cb58 SHA256 ef493209b0a51160171fd834a7ecdddd02679463b85fb89a2ea254213e47f99b
 AUX tinyxml-2.6.2-defineSTL.patch 353 RMD160 6c560140d279d849feb719decfd55ee0fa4fd9b8 SHA1 9931730c98809bf61865d90b91a007fa172b9ce4 SHA256 3baf2c4dbc2c8f54a151dac8860113d2f549174f83ed85d552b094dfaebb52af
 DIST tinyxml_2_6_2.tar.gz 210124 RMD160 e4f9072a76fb2fc2ced48d5ccd9b9f87ad94e53b SHA1 cba3f50dd657cb1434674a03b21394df9913d764 SHA256 15bdfdcec58a7da30adc87ac2b078e4417dbe5392f3afb719f9ba6d062645593
-EBUILD tinyxml-2.6.2-r1.ebuild 1408 RMD160 15afabd9fb797ef7b41b3af07dedc2e841e8afdd SHA1 1737137ac14555df6217eb9713fcd404de3890cf SHA256 1e98ec91074b5977cee9a47f6d1f0541ccf6782544d673d36be3e0853ae98e22
-EBUILD tinyxml-2.6.2-r2.ebuild 1416 RMD160 e4cfa86151184a0c917dbca2a97fc306aba4f8f1 SHA1 797134b51497731049df44141b548453d0240fd4 SHA256 f691537a52c249fdf518f9ab1ebc24fbf70b42271f06f913b5f92fb49b87e9b0
-EBUILD tinyxml-2.6.2.ebuild 1285 RMD160 f2908eb038c8e04f1a3971ba643af541f1844e50 SHA1 9ef8d377ac9e13e647e33601e6c85c297a0eff87 SHA256 59f71cc72d92d2d16d050fe460b5ea7de00832369871da7b210f822ac50560b7
-MISC ChangeLog 3976 RMD160 9106b1731c8a1b7579aff4e4101279c99cfce62b SHA1 2d86f24c18bdd7382bdeb062f53bb9d59de4c60a SHA256 27132ee56c293c7f6723c40121e666145cf33c741ad218ef16b648005b506a90
+EBUILD tinyxml-2.6.2-r2.ebuild 1405 RMD160 8011da6d685563cc107ff92c3a55b29a803b1795 SHA1 ace26ca58762a6050b02bb1c9919785513a53bac SHA256 97d884565febf2eb75330dd2abfde913a69fad49f0a737fd358af7ad9e6ad5c6
+MISC ChangeLog 4193 RMD160 4d0c11e7c5ab5f9820ca64c6a04cad5024c17b53 SHA1 fca155596a74c419e59f11f7f167e280a6b76deb SHA256 9711152999ab48d11702f29e765b08f66cca6f69e929797e90249f75a4fb6bba
 MISC metadata.xml 322 RMD160 666bcf1df59ae405909de12bb26df511e3ecf791 SHA1 82d6d3a487d5e90f0620e727c8ddcfcc0bf258af SHA256 0059eb4221e369e18ed58dcbc3c4412b7123402f5e07a00ff1f5259a0af02850
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.17 (GNU/Linux)
+
+iQIcBAEBAgAGBQJPyHhtAAoJEOSiRoyO7jvoTrYP/RlFC+xBVyitKQNojHlOkHh3
+0BpWjySx5Y3d/WmnLO0w5P8wseZSdlhbh79TF0CT8zXMvL2sOcBzIiD8igezIcEn
+LKAlhMlFe3ukPUbQUfVQFeN4/bYrHFou29TxAsE3Zxxw9nSUAxJK2GDtYqRYdi1C
+MrnvK79hDg2QTaZfWBG880xfR+fq4KM06EifH7JJaNiqs2PiFBBIyPZ8q8Voapwa
+PaUU85jMV3X5Oqjd2wQIaa3wHxtUckbRgXzIqv+98pzEmi2IGOEc9shXp45vwYuI
++X5xlIF/TS/9snGw2Q747bss3s/ltejO/WGAzAAylNkp/3b6arQoMNf++GuzPiDr
+Vfcf+LM5tj66keO0kNb4b0vSGArmFQzOHU4wvWPrGzOh55MMjnCbUegBjByWez/K
+wOgQ70v7x8jq8JEFVxHUe4iQf/zB4LzfLQRYaMElQCppU2xF6K+8EGPPB8fmTtyB
+2ampzlodPbFDLhNGZAIEw2uFWR6HZrcw/wDf14k2ncnYCsLh3rdB1sV//BwowQHG
+hAu6GtV8cvwnhd0nKdCCq8CZ5pXTWZMFOlZK1PloaNjOS7BnEyGM2cXAYbKSFUTr
+9/Aetq1GfmOWSZv5Z01RU7oXLYAfGw4in3/sU1MUbQk5QvpmDKhaY1mpvZ3oppYu
+myVjkFR+eM8yoXfqfsUC
+=B8jZ
+-----END PGP SIGNATURE-----
