@@ -1,6 +1,6 @@
 # Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/tinyxml/tinyxml-2.6.2-r2.ebuild,v 1.3 2012/04/16 19:20:21 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/tinyxml/tinyxml-2.6.2-r2.ebuild,v 1.4 2012/06/01 08:06:25 scarabeus Exp $
 
 EAPI=4
 inherit flag-o-matic toolchain-funcs eutils multilib
@@ -11,7 +11,7 @@ SRC_URI="mirror://sourceforge/${PN}/${PN}_${PV//./_}.tar.gz"
 
 LICENSE="ZLIB"
 SLOT="0"
-KEYWORDS="~amd64 ~arm ~ia64 ppc ~sparc ~x86 ~x64-macos ~x86-macos"
+KEYWORDS="amd64 ~arm ~ia64 ppc ~sparc x86 ~x64-macos ~x86-macos"
 IUSE="debug doc static-libs +stl"
 
 RDEPEND=""
@@ -50,7 +50,5 @@ src_install() {
 
 	dodoc {changes,readme}.txt
 
-	if use doc; then
-		dohtml -r docs/*
-	fi
+	use doc && dohtml -r docs/*
 }
