@@ -1,6 +1,10 @@
 # ChangeLog for dev-libs/tinyxml
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/tinyxml/ChangeLog,v 1.22 2012/04/16 19:20:21 ranger Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-libs/cvs-repo/gentoo-x86/dev-libs/tinyxml/ChangeLog,v 1.23 2012/06/01 08:06:25 scarabeus Exp $
+
+  01 Jun 2012; Tomáš Chvátal <scarabeus@gentoo.org> -files/Makefile-2,
+  -tinyxml-2.6.2-r1.ebuild, -tinyxml-2.6.2.ebuild, tinyxml-2.6.2-r2.ebuild:
+  Stable on amd64 and x86 to match up ppc. Remove older stuff.
 
   16 Apr 2012; Brent Baude <ranger@gentoo.org> tinyxml-2.6.2-r2.ebuild:
   Marking tinyxml-2.6.2-r2 ppc for bug 398285
